[package]
name = "semilattice-client-lib"
version = "0.0.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "This is still in development."

repository = "https://github.com/OdenShirataki/wild-doc-server"

keywords = ["database","javascript","v8","xml","html"]
categories = ["database","database-implementations","Text processing","Web programming","Template engine"]

[dependencies]
